fix svg overflow

--- a/src/components/header/header.module.sass
+++ b/src/components/header/header.module.sass
@@ -55,6 +55,7 @@
       svg, img
         height: var(--icon-size)
         width: auto
+        overflow: visible
 
 .topRow
   height: 3.125rem
@@ -75,6 +76,7 @@
 
 .logo
   flex-grow: 1
+  overflow: visible
 
 .toggle
   svg
